# befreeclub

./: .dockerignore  .gitignore  CLAUDE.md  README.md
backend/: .env.example  .env.production.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_landing_billing_members_newsletter.py  0003_admin_settings.py  0004_admin_encrypted_secrets.py
backend/app/: main.py
backend/app/core/: claude_cli.py  config.py  db.py  dev_mode.py  email.py  logging.py  meta_capi.py  schemas.py  secret_box.py  security.py  semaphore.py  stripe_client.py  ws.py
backend/app/modules/admin/: models.py  schemas.py
backend/app/modules/billing/: models.py  schemas.py
backend/app/modules/circle_dm/: models.py  schemas.py
backend/app/modules/landing/: models.py  schemas.py
backend/scripts/: backfill_image_descriptions.py  backfill_voice_transcripts.py  set_auth_password.py
backend/tests/: conftest.py  test_admin_connections.py  test_admin_secrets.py  test_admin_settings.py  test_admin_settings_api.py  test_billing_admin_lifecycle.py  test_billing_admin_subscribers.py  test_billing_checkout.py  test_billing_ebook.py  test_billing_klarna.py  test_billing_lifecycle.py  test_billing_payment_method.py  test_billing_promo.py  test_billing_webhook.py  test_dev_mocks.py  test_email.py  test_members.py  test_members_circle_client.py  test_meta_capi.py  test_newsletter_doi.py  test_newsletter_public.py  test_newsletter_sender.py  test_secret_box.py  test_settings_wiring.py  test_stripe_client.py  test_workers.py
docs/: ARCHITEKTURA.md  (+5 more)
(+193 files in other folders)
